--- a/app-canada/src/index.html
+++ b/app-canada/src/index.html
@@ -30,7 +30,7 @@
         content="no-referrer"
     />
 
-    <title>Sample react based SPA with Asgardeo Auth React SDK</title>
+    <title>WA CA</title>
 
     <link
         rel="icon"
